--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(cignore C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(cignore main.c slicing.c include/slicing.h)
+add_executable(cignore main.c slicing.c include/slicing.h args.c include/args.h)
