--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Test Files
+test.gitignore
+
 # Created by https://www.toptal.com/developers/gitignore/api/c,cmake,clion
 # Edit at https://www.toptal.com/developers/gitignore?templates=c,cmake,clion
 
