--- a/.gitignore
+++ b/.gitignore
@@ -192,3 +192,33 @@ _deps
 *-prefix/
 
 # End of https://www.toptal.com/developers/gitignore/api/c,cmake,clion
+# Created by https://www.toptal.com/developers/gitignore/api/pp
+# Edit at https://www.toptal.com/developers/gitignore?templates=pp
+
+#!! ERROR: pp is undefined. Use list command to see defined gitignore types !!#
+
+# End of https://www.toptal.com/developers/gitignore/api/pp
+# Created by https://www.toptal.com/developers/gitignore/api/pp
+# Edit at https://www.toptal.com/developers/gitignore?templates=pp
+
+#!! ERROR: pp is undefined. Use list command to see defined gitignore types !!#
+
+# End of https://www.toptal.com/developers/gitignore/api/pp
+# Created by https://www.toptal.com/developers/gitignore/api/pp
+# Edit at https://www.toptal.com/developers/gitignore?templates=pp
+
+#!! ERROR: pp is undefined. Use list command to see defined gitignore types !!#
+
+# End of https://www.toptal.com/developers/gitignore/api/pp
+# Created by https://www.toptal.com/developers/gitignore/api/pp
+# Edit at https://www.toptal.com/developers/gitignore?templates=pp
+
+#!! ERROR: pp is undefined. Use list command to see defined gitignore types !!#
+
+# End of https://www.toptal.com/developers/gitignore/api/pp
+# Created by https://www.toptal.com/developers/gitignore/api/pp
+# Edit at https://www.toptal.com/developers/gitignore?templates=pp
+
+#!! ERROR: pp is undefined. Use list command to see defined gitignore types !!#
+
+# End of https://www.toptal.com/developers/gitignore/api/pp
