--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ include(CPack)
 cmake_minimum_required(VERSION 3.25)
 project(quickignore VERSION 1.0.1 LANGUAGES C)
 
+add_definitions(-DVERSION="${PROJECT_VERSION}")
+
 set(CMAKE_C_STANDARD 11)
 
 add_executable(quickignore src/main.c src/args.c include/args.h src/requests.c include/requests.h)
